<resources>
    <string name="app_name">Car Tracker</string>
    <string name="start_button">Start Drive</string>
    <string name="new_car">New Car</string>
    <string name="select_car">Select Car</string>
    <string name="car_model">Car Model</string>
    <string name="car_color">Car Color</string>
    <string name="car_mileage">Car Mileage</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_car">Create Car</string>
    <string name="view_drives">View Past Drives</string>
    <string name="select_trip">Select Trip</string>
    <string name="end_drive">End Drive</string>
    <string name="current_drive">Current Drive</string>
    <string name="done">Done</string>
    <string name="refresh_gps">Enable GPS</string>
    <string name="drive_ended">Drive Ended</string>
    <string name="remove_car">Remove Cars</string>
    <string name="api_key">AIzaSyBTJ1wFcbJIzIvt6oSF0p8hnf-ZY0vTp4w</string>
    <string name="nav">Navigation Button</string>
</resources>
