<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="higbee.Final.StartDrive">

    <ImageButton
        android:id="@+id/startImgButton"
        android:layout_width="236dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/car_96"
        app:layout_constraintVertical_bias="0.207" />

    <ImageButton
        android:id="@+id/pastImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/view_drives"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.355"
        app:srcCompat="@mipmap/pastdrive"
        app:layout_constraintTop_toBottomOf="@+id/startImgButton"
        app:layout_constraintBottom_toTopOf="@+id/parkingBtn" />

    <ImageButton
        android:id="@+id/parkingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/select_trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656"
        app:srcCompat="@mipmap/parking" />

</android.support.constraint.ConstraintLayout>
